--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="zh-TW"><head><title>PC Partner</title>
+<!DOCTYPE html><html lang="zh-TW"><head><title>简金商户</title>
 <meta name="keywords" content="PC Partner" />
 <meta name="description" content="PC Partner" />
 <meta http-equiv="content-language" content="zh-TW">
@@ -17,18 +17,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="" class="navbar-brand"><img alt="PC Partner Logo" width="200" height="70" src="images/xqb-logo.png" style="margin-right:20px;"></a>
+            <a href="" class="navbar-brand"><img alt="PC Partner Logo" width="70" height="70" src="images/xqb-logo.png" style="margin-right:20px;"></a>
         </div>
         <!--导航-->
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#home">主頁</a></li>
-                <li><a href="#html5">關於我們</a></li>
-                <li><a href="#course">主要業務</a></li>
-                <li><a href="#contact">聯繫我們</a></li>
+                <li><a href="#home">主页</a></li>
+                <li><a href="#html5">关于我们</a></li>
+                <li><a href="#course">主要业务</a></li>
+                <li><a href="#contact">联系我们</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="javascript:;">電話:(852) 2799 8011</a></li>
+                <li><a href="javascript:;">联系方式：15693147993</a></li>
             </ul>
         </div>
         <!--导航-->
@@ -39,9 +39,9 @@
 <!--home-->
 <section id="home">
 <div class="jumbotron banner wow fadeInRight"><div class="container">
-<h1>栢能集團有限公司</h1>
-<p>栢能科技集團 1997 年於香港成立，並由一家初期少於 300 名員工的合約生產商，發展成現在擁有國際知名的自我品牌集團，並於海外多處設有分部。</p>
-<p><a class="btn btn-success btn-lg" href="https://finance.yahoo.com/quote/1263.HK" role="button">PC PARTNER(1263.HK<span id="shijia"></span>)</a></p>
+<h1>简金商户服务</h1>
+<p>简金服务为商户提供一站式技术解决方案，包括支付接入，点餐小程序，财务管理等。</p>
+<!-- <p><a class="btn btn-success btn-lg" role="button">简金商户服务</a></p> -->
 </div></div>
 </section>
 <!--home-->
@@ -53,22 +53,22 @@
             <div class="col-md-4">
                 <a href="javascript:;">
                     <img src="images/index-icon1.png" class="img-responsive" alt=""/>
-                    <h3>20 多年的知識和經驗累積</h3>
-                    <p>優質產品、創新設計、專業服務和實用的解決方案</p>
+                    <h3>专业技术团队</h3>
+                    <p>优质产品，高效团队，创新设计和定制化方案</p>
                 </a>
             </div>
             <div class="col-md-4">
                 <a href="javascript:;">
                     <img src="images/index-icon2.png" class="img-responsive" alt=""/>
-                    <h3>端到端服務</h3>
-                    <p>從提供產品規劃到售後服務，我們管理並加速所有生產流程</p>
+                    <h3>端到端服务</h3>
+                    <p>产品规划到售后服务的一站式解决方案</p>
                 </a>
             </div>
             <div class="col-md-4">
                 <a href="javascript:;">
                     <img src="images/index-icon3.png" class="img-responsive" alt=""/>
                     <h3>迅速支援</h3>
-                    <p>在美洲、歐洲和亞太地區的重要城市皆設有辦事處</p>
+                    <p>强大的线下服务团队为您提供服务</p>
                 </a>
             </div>
         </div>
@@ -80,10 +80,11 @@
 <section id="html5">
     <div class="container">
         <div class="col-md-7 wow fadeInLeft">
-            <h2>您可信賴的業界領導者</h2>
-            <p>集團堅持不懈地引進創新產品意念及先進科技，確保我們能以最強的競爭力服務我們的客戶。</p>
-            <p><span class="glyphicon glyphicon-grain mai-icon"></span>1997年，栢能科技集團在香港成立<br>1998年，獲頒 ISO 9001 品質體系統認證<br>2006年，推出自我開發品牌 ZOTAC（索泰）圖像顯示卡</p>
-            <p><span class="glyphicon glyphicon-grain mai-icon"></span>2011年，收購亞之傑（ASK）及萬利達（Manli）集團<br>2012年，於香港聯合交易所主板上市<br>2019年，在中國成立雲端運算的合資公司</p>
+            <h2>可信赖的专业团队</h2>
+            <p>团队成员有丰富的支付方案经验，程序开发能力和财务服务能力</p>
+            <p><span class="glyphicon glyphicon-grain mai-icon"></span>2021年已为上千商户进行营销优化
+            <p><span class="glyphicon glyphicon-grain mai-icon"></span>2022年,支持系统级解决方案
+            <p><span class="glyphicon glyphicon-grain mai-icon"></span>2023年，再次前进</p>
         </div>
         <div class="col-md-5 wow fadeInRight">
             <img src="images/xcxyhs.png" class="img-responsive" alt=""/>
@@ -99,10 +100,10 @@
             <img src="images/xcxqygw.png" class="img-responsive" alt=""/>
         </div>
         <div class="col-md-6">
-            <h2>為您提供綜合解決方案</h2>
-            <p>我們不斷跟客戶保持緊密聯繫，開發嶄新、高質素的產品及技術，以滿足市場的需要，使我們站穩行業的先驅位置。</p>
-            <p><span class="glyphicon glyphicon-grain mai-icon"></span>協助你從零開始的建立產品<br>積極參與產品策略規劃，並根據你的需求和業務目標來制定產品概念。透過我們豐富的技能和經驗，為你構思並打造能與同類型產品正面競爭的獨特成品。</p>
-            <p><span class="glyphicon glyphicon-grain mai-icon"></span>建立並管理強大的可持續供應鏈<br>透過強大的全球分銷網絡、頂尖的產品分析和風險管理、以及快速投放市場，從而讓你的產品以最小成本推出於全球市場。</p>
+            <h2>为您提供综合解决方案</h2>
+            <p>我们不断跟客户保持紧密联繫，开发崭新、高质素的产品及技术，以满足市场的需要，使我们站稳行业的先驱位置。</p>
+            <p><span class="glyphicon glyphicon-grain mai-icon"></span>协助你从零开始的建立产品</p>
+            <p><span class="glyphicon glyphicon-grain mai-icon"></span>建立并管理强大的可持续产品矩阵</p>
         </div>
     </div>
 </section>
@@ -113,7 +114,7 @@
     <div class="container">
         <div class="row wow fadeIn" data-wow-delay="0.6s">
             <div class="col-md-12">
-                <h2>主要業務</h2>
+                <h2>主要业务</h2>
             </div>
             <div class="col-md-3">
                 <div class="course">
@@ -149,31 +150,23 @@
                     <h2>
                         <span class="glyphicon glyphicon-send"></span>
                         &nbsp;
-                        聯繫我們
+                       联系我们 
                     </h2>
-                    <p>
-                        栢能科技集團 1997 年於香港成立，以卓越的研發能力和頂尖生產技術，屹立於行業前列地位。我們產品線多元化，現已擴展到圖像顯示卡、迷你電腦、主機板、嵌入式系統及電競硬件等多種產品類別。同時，栢能亦為世界知名品牌提供一站式的電子專業製造服務（EMS）。
-                    </p>
                     <address>
-                        <p>
-                            <span class="glyphicon glyphicon-map-marker"></span>
-                            &nbsp;
-                            地址: 香港新界沙田火炭山尾街18-24號沙田商業中心19樓
-                        </p>
                         <p>
                             <span class="glyphicon glyphicon-earphone"></span>
                             &nbsp;
-                            電話: (852) 2799 8011
+                            联系方式：15693147993
                         </p>
                         <p>
                             <span class="glyphicon glyphicon-envelope"></span>
                             &nbsp;
-                            電郵: <a href="mailto:inquiry@pcpartner.com" target="_blank">inquiry@pcpartner.com</a>
+                            电子邮件 <a href="mailto:inquiry@pcpartner.com" target="_blank">kfx721@sina.com</a>
                         </p>
                     </address>
                 </div>
                 <div class="col-md-5 wow fadeInRight animated">
-                    <img align="right" src="images/contactus.png" class="img-responsive" alt="聯繫我們"/>
+                    <img align="right" src="images/contactus.png" class="img-responsive" alt="联系我们"/>
                 </div>
             </div>
         </div>
@@ -186,7 +179,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                &copy;&nbsp;Copyright PC Partner Group Limited. All Rights Reserved.
+                &copy;&nbsp;Copyright jianjin business service. All Rights Reserved.
             </div>
         </div>
     </div>
