--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="zh-TW"><head><title>简金商户</title>
+<!DOCTYPE html><html lang="zh-TW"><head><title>简金企业</title>
 <meta name="keywords" content="PC Partner" />
 <meta name="description" content="PC Partner" />
 <meta http-equiv="content-language" content="zh-TW">
@@ -17,7 +17,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="" class="navbar-brand"><img alt="PC Partner Logo" width="70" height="70" src="images/xqb-logo.png" style="margin-right:20px;"></a>
+            <a href="" class="navbar-brand"><img alt="PC Partner Logo" width="65" height="65" src="images/busi-logo.png" style="margin-right:20px;"></a>
         </div>
         <!--导航-->
         <div class="navbar-collapse collapse">
@@ -39,9 +39,9 @@
 <!--home-->
 <section id="home">
 <div class="jumbotron banner wow fadeInRight"><div class="container">
-<h1>简金商户服务</h1>
-<p>简金服务为商户提供一站式技术解决方案，包括支付接入，点餐小程序，财务管理等。</p>
-<!-- <p><a class="btn btn-success btn-lg" role="button">简金商户服务</a></p> -->
+<h1>简金企业服务</h1>
+<p>简金服务为企业提供一站式技术解决方案，包括企业流程数字化，效率提升咨询等。</p>
+<!-- <p><a class="btn btn-success btn-lg" role="button">简金企业服务</a></p> -->
 </div></div>
 </section>
 <!--home-->
@@ -81,9 +81,9 @@
     <div class="container">
         <div class="col-md-7 wow fadeInLeft">
             <h2>可信赖的专业团队</h2>
-            <p>团队成员有丰富的支付方案经验，程序开发能力和财务服务能力</p>
-            <p><span class="glyphicon glyphicon-grain mai-icon"></span>2021年已为上千商户进行营销优化
-            <p><span class="glyphicon glyphicon-grain mai-icon"></span>2022年,支持系统级解决方案
+            <p>团队成员有丰富的解决方案经验，开发能力和支持服务能力</p>
+            <p><span class="glyphicon glyphicon-grain mai-icon"></span>团队配套齐全，前后端成团技术实力强
+            <p><span class="glyphicon glyphicon-grain mai-icon"></span>提供完善的系统级解决方案，
             <p><span class="glyphicon glyphicon-grain mai-icon"></span>2023年，再次前进</p>
         </div>
         <div class="col-md-5 wow fadeInRight">
