--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="zh-TW"><head><title>简金企业</title>
+<!DOCTYPE html><html lang="zh-TW"><head><title>COMISTXS</title>
 <meta name="keywords" content="PC Partner" />
 <meta name="description" content="PC Partner" />
 <meta http-equiv="content-language" content="zh-TW">
@@ -39,8 +39,8 @@
 <!--home-->
 <section id="home">
 <div class="jumbotron banner wow fadeInRight"><div class="container">
-<h1>简金企业服务</h1>
-<p>简金服务为企业提供一站式技术解决方案，包括企业流程数字化，效率提升咨询等。</p>
+<h1>COMISTXS 简金企业服务</h1>
+<p>COMISTXS 简金服务为企业提供一站式技术解决方案，包括企业流程数字化，效率提升咨询等。</p>
 <!-- <p><a class="btn btn-success btn-lg" role="button">简金企业服务</a></p> -->
 </div></div>
 </section>
